--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@ background:linear-gradient(0deg,#EBAC39,#E7E32C);
 
 </style>
 </head>
-<body background="C:\Users\Dayatri\Downloads\haunted back.jpg">
+<body background="haunted back.jpg">
 <link href="https://fonts.googleapis.com/css2?family=Creepster&display=swap" rel="stylesheet">
          <ul>
                    <li>i</li>
@@ -231,7 +231,7 @@ background:linear-gradient(0deg,#EBAC39,#E7E32C);
 <!-- Audio element with loop attribute -->
 <audio id="haunted-audio" loop>
    
-    <source src="C:\Users\Dayatri\Downloads\hauntedvoice.mp3" type="audio/mp3">
+    <source src="hauntedvoice.mp3" type="audio/mp3">
     Your browser does not support the audio element.
 </audio>
 
@@ -295,7 +295,7 @@ background:linear-gradient(0deg,#EBAC39,#E7E32C);
             }
 
             // Replace 'destination.html' with the actual path of your destination page
-            window.location.replace("abc.html");
+            window.location.replace("haunted1.html");
         }
 </script>
 </body>
