--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@ background:linear-gradient(0deg,#EBAC39,#E7E32C);
                     <li>h</li>
                     <li>s</li>
                     <li>s</li>
-                    <li><img src="C:\Users\Dayatri\Documents\halloween\Scary boo\Scary boo\sacry face.jpg"></li>
+                    <li><sacry face.jpg"></li>
                     </ul>
                     
 <!-- Audio element with loop attribute -->
